# pathfinding_R_star

./: .gitignore  README.md  build.bat  test_utility.py
resources/: 1111111-sample.xml  1111111-sample_log.xml  3620869-WCIII.xml  3620869-WCIII_log.xml  3622198.xml  3664933.xml  3750804-BG_log.xml  3839748.xml  3839748_2.xml  3839748_2_log.xml  3839748_log.xml  4226598_log.xml  4544250.xml  4544250_log.xml  4759380.xml  4768079.xml  4768079_2.xml  4768079_2_log.xml  4768079_3.xml  4768079_3_log.xml  4788268-Moscow2.xml  4788268-Moscow2_log.xml
sources/: ASearch.pro  CMakeLists.txt  astar.cpp  astar.h  config.cpp  gl_const.h  jpsearch.cpp  jpsearch.h  mission.cpp  node.h  opencontainer.h  pathfinding_r_star.pro  rjpsearch.cpp  rjpsearch.h  rstar.cpp  rstar.h  searchresult.h
testing_scripts/: algo_comparsion.py  desc.txt  elevations-3d-surface.html  global_test_params.txt  input.xml  input_log.xml  rjps1.csv  rjps1.html  rjps2.csv  rjps2.html  rjps3.csv  rjps3.html  rjps_ll.csv  rjps_time_by_params.py  rstar2.html  rstar_time_by_NOS_LSSL.py  rstar_time_by_params.py  run.sh  stats.csv  stats_rjps.csv  table_to_wolfram_query.py  template.xml
testing_scripts/templates/: map1.xml  map1_1.xml  map1_2.xml  map1_3.xml  map1_4.xml  map1_5.xml  map2.xml  map2_1.xml  map2_2.xml  map2_3.xml  map2_4.xml  map2_5.xml  map3.xml  map3_1.xml  map3_2.xml  map3_3.xml  map3_4.xml  map3_5.xml  map4.xml  map4_1.xml  map4_2.xml  map4_3.xml  map4_4.xml  map4_5.xml
testing_scripts/test2_results/: test2_1_plot.html  test2_1_stats.csv  test2_2_plot.html  test2_2_stats.csv  test2_3_desc  test2_3_plot.html  test2_3_stats.csv  test_rjps_plot.html
testing_scripts/tests_results/: elevations-3d-surface.html  rstar1.html  rstar4.csv  rstar5.html  test1_desc  test1_fitted.html  test1_graph.html  test1_stats.csv  test2_desc  test2_fitted.html  test2_plot.html  test2_stats.csv  test3_desc  test3_graph.html  test3_plot.html  test3_stats.csv  test4_desc  test4_plot.html  test4_stats.csv  (+9 more)
(+13 files in other folders)
